Fix button padding on mobile

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -92,9 +92,6 @@
       margin-right: var(--spacing-s);
     }
 
-    > * {
-      // padding-bottom: var(--spacing-m);
-    }
     flex-flow: wrap;
     justify-content: space-between;
   }
