--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -714,6 +714,14 @@ textarea {
       }
     }
   }
+
+  .card__actions {
+    @media (max-width: $breakpoint-small) {
+      > * {
+        padding-bottom: var(--spacing-m);
+      }
+    }
+  }
 }
 
 .topPage-wrapper {
